[package]
name = "rust-idf"
version = "0.1.0"
authors = ["Adam Badry <57472142+Sk3tch7y@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rust-idf"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp-idf-sys/ble"]

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-hal = "0.45.2"
esp-idf-sys = "0.36.1"
# --- Optional Embassy Integration ---
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } 
once_cell = "1.21.3"
# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
#embassy-time = { version = "0.4.0"} # NOTE: any generic-queue variant will work

# b) With embassy-executor:
#embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
uuid = { version = "1", features = ["v4"] }
